fixed spacing in header.

--- a/css/less/layout.less
+++ b/css/less/layout.less
@@ -262,3 +262,7 @@
 .woocommerce ul.products li.product a img, .woocommerce-page ul.products li.product a img {
   margin: 0 0 0 !important;
 }
+
+#mNavContainer {
+  margin-top: -5px;
+}
